--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ publish = true
 
 [features]
 default = ["mesalock_sgx"]
-mesalock_sgx = ["protected_fs_rs/mesalock_sgx", "sgx_libc", "sgx_tstd", "sgx_types", "sgx_trts"]
+mesalock_sgx = ["protected_fs_rs/mesalock_sgx", "sgx_libc", "sgx_tstd", "sgx_types", "sgx_trts", "sgx_tunittest"]
 
 [dependencies]
 crc = { version = "2.0", git = "https://github.com/mesalock-linux/crc-rs-sgx" }
@@ -27,6 +27,7 @@ sgx_libc = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.g
 sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
+sgx_tunittest = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 
 [dev-dependencies]
 #time-test = "0.2"
