--- a/sgx/unittest/enclave/Cargo.toml
+++ b/sgx/unittest/enclave/Cargo.toml
@@ -15,6 +15,7 @@ mesalock_sgx = []
 [dependencies]
 rusty-leveldb = { path = "../../../" }
 rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }
+integer-encoding = {version = "1.0", git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx"}
 
 [target.'cfg(not(target_env = "sgx"))'.dependencies]
 sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
