--- a/sgx/unittest/enclave/Cargo.toml
+++ b/sgx/unittest/enclave/Cargo.toml
@@ -16,6 +16,7 @@ mesalock_sgx = []
 rusty-leveldb = { path = "../../../" }
 rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }
 integer-encoding = {version = "1.0", git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx"}
+crc = { version = "2.0", git = "https://github.com/mesalock-linux/crc-rs-sgx" }
 
 [target.'cfg(not(target_env = "sgx"))'.dependencies]
 sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
