--- a/sgx/write-a-lot/enclave/Cargo.toml
+++ b/sgx/write-a-lot/enclave/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "Helloworldsampleenclave"
+name = "WriteALotEnclave"
 version = "1.0.0"
 authors = ["Baidu"]
 edition = "2018"
 
 [lib]
-name = "helloworldsampleenclave"
+name = "writealot"
 crate-type = ["staticlib"]
 
 [features]
@@ -19,7 +19,6 @@ rand = { version = "0.7", git = "https://github.com/mesalock-linux/rand-sgx" }
 [target.'cfg(not(target_env = "sgx"))'.dependencies]
 sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
 sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
-sgx_tunittest = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
 
 [profile.release]
 lto = false
